# claude-code-config

./: .claude-hooks-config.sh  .claude-hooks-ignore  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .settings.json  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GUIDE.md  MCP_Morphllm.md  MCP_Sequential.md  Makefile  README.md  agents  claude-powerline.json  gemini-extension.json  hook-config.json  hooks  package.json  pyproject.toml  settings.json  skills  tsconfig.json
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
agents/: ai-panel.md  claude-reviewer.md  codex-assistant.md  deployment-specialist.md  docs-keeper.md  gemini-consultant.md  gemini-media-analyst.md  gemini-researcher.md  gemini-shell-helper.md  go-engineer.md  infra-engineer.md  orchestrator.md  pdf-parser.md  perplexity-researcher.md  playwright-tester.md  python-engineer.md  quality-guardian.md  typescript-engineer.md  web-engineer.md
commands/: @check.md  @commit.md  @deploy-check.md  @docs.md  @orchestrate.md  @remember.md  @spec-gen.md  @spec-status.md  @spec-work.md  @test-coverage.md  @testing.md  ask_gemini.md  ccs  ccs.md  deploy-check.md  docs.md  gen-mocks.md  learn.md  orchestrate.md  perf.md  remember.md  research.md  reset.md  review.md  test-coverage.md  watch-team.md
docs/: agent-audit-2026-05-16.md  instruction-lint-rules.md  mcp-migration-backlog.md  pi-extensions.md  pi-skill-export.md  skill-compiler-design.md  skill-eval-roadmap.md  skill-evals.md  skill-format.md  skills-audit-2026-05-17.md
flat/: hook-config.json
(+945 files in other folders)
